nars2networkx/gen/NarseseParser.py
# Generated from Narsese.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class NarseseParser ( Parser ):

    grammarFileName = "Narsese.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<'", "'{'", "'}'", "'>'", "'('", "'*'", 
                     "','", "')'", "'ECHO'", "':'", "'['", "']'", "'%'", 
                     "';'", "'_'", "'&&'", "'||'", "'&|'", "'&/'", "'|'", 
                     "'&'", "'/'", "'--'", "'\\'", "'-'", "'~'", "<INVALID>", 
                     "<INVALID>", "'^believe'", "'^wonder'", "<INVALID>", 
                     "<INVALID>", "':/:'", "':|:'", "':\\:'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "SentenceType", 
                      "NarsLogEntryPrefix", "Believe", "Wonder", "Variable", 
                      "COPULA", "FutureEvent", "PresentEvent", "PastEvent", 
                      "CYCLES", "FLOAT", "DIGIT", "WORD", "NewLine", "WS", 
                      "LineComment", "BlockComment" ]

    RULE_narsese = 0
    RULE_statement = 1
    RULE_coreterm = 2
    RULE_freqConf = 3
    RULE_term = 4
    RULE_extensionalSet = 5
    RULE_compoundTerm = 6
    RULE_compoundTermOpMulti = 7
    RULE_tense = 8
    RULE_opMulti = 9

    ruleNames =  [ "narsese", "statement", "coreterm", "freqConf", "term", 
                   "extensionalSet", "compoundTerm", "compoundTermOpMulti", 
                   "tense", "opMulti" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    SentenceType=27
    NarsLogEntryPrefix=28
    Believe=29
    Wonder=30
    Variable=31
    COPULA=32
    FutureEvent=33
    PresentEvent=34
    PastEvent=35
    CYCLES=36
    FLOAT=37
    DIGIT=38
    WORD=39
    NewLine=40
    WS=41
    LineComment=42
    BlockComment=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class NarseseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NarseseParser.StatementContext)
            else:
                return self.getTypedRuleContext(NarseseParser.StatementContext,i)


        def NewLine(self, i:int=None):
            if i is None:
                return self.getTokens(NarseseParser.NewLine)
            else:
                return self.getToken(NarseseParser.NewLine, i)

        def getRuleIndex(self):
            return NarseseParser.RULE_narsese

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNarsese" ):
                listener.enterNarsese(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNarsese" ):
                listener.exitNarsese(self)




    def narsese(self):

        localctx = NarseseParser.NarseseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_narsese)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << NarseseParser.T__0) | (1 << NarseseParser.T__1) | (1 << NarseseParser.T__4) | (1 << NarseseParser.T__8) | (1 << NarseseParser.T__10) | (1 << NarseseParser.T__14) | (1 << NarseseParser.NarsLogEntryPrefix) | (1 << NarseseParser.Believe) | (1 << NarseseParser.Wonder) | (1 << NarseseParser.Variable) | (1 << NarseseParser.CYCLES) | (1 << NarseseParser.WORD))) != 0):
                self.state = 20
                self.statement()
                self.state = 22 
                self._errHandler.sync(self)
                _alt = 1+1
                while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1+1:
                        self.state = 21
                        self.matchWildcard()

                    else:
                        raise NoViableAltException(self)
                    self.state = 24 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

                self.state = 26
                self.match(NarseseParser.NewLine)
                self.state = 32
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return NarseseParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Statement1bContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NarseseParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NarsLogEntryPrefix(self):
            return self.getToken(NarseseParser.NarsLogEntryPrefix, 0)
        def coreterm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NarseseParser.CoretermContext)
            else:
                return self.getTypedRuleContext(NarseseParser.CoretermContext,i)

        def COPULA(self):
            return self.getToken(NarseseParser.COPULA, 0)
        def SentenceType(self):
            return self.getToken(NarseseParser.SentenceType, 0)
        def tense(self):
            return self.getTypedRuleContext(NarseseParser.TenseContext,0)

        def freqConf(self):
            return self.getTypedRuleContext(NarseseParser.FreqConfContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement1b" ):
                listener.enterStatement1b(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement1b" ):
                listener.exitStatement1b(self)


    class Statement5Context(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NarseseParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NarseseParser.StatementContext)
            else:
                return self.getTypedRuleContext(NarseseParser.StatementContext,i)

        def COPULA(self):
            return self.getToken(NarseseParser.COPULA, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement5" ):
                listener.enterStatement5(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement5" ):
                listener.exitStatement5(self)


    class Statement6Context(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NarseseParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def term(self):
            return self.getTypedRuleContext(NarseseParser.TermContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement6" ):
                listener.enterStatement6(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement6" ):
                listener.exitStatement6(self)


    class Statement3Context(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NarseseParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NarsLogEntryPrefix(self):
            return self.getToken(NarseseParser.NarsLogEntryPrefix, 0)
        def compoundTermOpMulti(self):
            return self.getTypedRuleContext(NarseseParser.CompoundTermOpMultiContext,0)

        def SentenceType(self):
            return self.getToken(NarseseParser.SentenceType, 0)
        def tense(self):
            return self.getTypedRuleContext(NarseseParser.TenseContext,0)

        def freqConf(self):
            return self.getTypedRuleContext(NarseseParser.FreqConfContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement3" ):
                listener.enterStatement3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement3" ):
                listener.exitStatement3(self)


    class Statement4Context(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NarseseParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement4" ):
                listener.enterStatement4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement4" ):
                listener.exitStatement4(self)


    class Statement1Context(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NarseseParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NarsLogEntryPrefix(self):
            return self.getToken(NarseseParser.NarsLogEntryPrefix, 0)
        def WORD(self):
            return self.getToken(NarseseParser.WORD, 0)
        def COPULA(self):
            return self.getToken(NarseseParser.COPULA, 0)
        def coreterm(self):
            return self.getTypedRuleContext(NarseseParser.CoretermContext,0)

        def SentenceType(self):
            return self.getToken(NarseseParser.SentenceType, 0)
        def freqConf(self):
            return self.getTypedRuleContext(NarseseParser.FreqConfContext,0)

        def tense(self):
            return self.getTypedRuleContext(NarseseParser.TenseContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement1" ):
                listener.enterStatement1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement1" ):
                listener.exitStatement1(self)


    class Statement2Context(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NarseseParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NarsLogEntryPrefix(self):
            return self.getToken(NarseseParser.NarsLogEntryPrefix, 0)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NarseseParser.StatementContext)
            else:
                return self.getTypedRuleContext(NarseseParser.StatementContext,i)

        def COPULA(self):
            return self.getToken(NarseseParser.COPULA, 0)
        def SentenceType(self):
            return self.getToken(NarseseParser.SentenceType, 0)
        def tense(self):
            return self.getTypedRuleContext(NarseseParser.TenseContext,0)

        def freqConf(self):
            return self.getTypedRuleContext(NarseseParser.FreqConfContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement2" ):
                listener.enterStatement2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement2" ):
                listener.exitStatement2(self)



    def statement(self):

        localctx = NarseseParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                localctx = NarseseParser.Statement1Context(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.match(NarseseParser.NarsLogEntryPrefix)
                self.state = 34
                self.match(NarseseParser.T__0)
                self.state = 35
                self.match(NarseseParser.T__1)
                self.state = 36
                self.match(NarseseParser.WORD)
                self.state = 37
                self.match(NarseseParser.T__2)
                self.state = 38
                self.match(NarseseParser.COPULA)
                self.state = 39
                self.coreterm()
                self.state = 40
                self.match(NarseseParser.T__3)
                self.state = 45
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 41
                    self.match(NarseseParser.SentenceType)
                    self.state = 43
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        self.state = 42
                        self.tense()




                self.state = 48
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 47
                    self.freqConf()


                pass

            elif la_ == 2:
                localctx = NarseseParser.Statement1bContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.match(NarseseParser.NarsLogEntryPrefix)
                self.state = 51
                self.match(NarseseParser.T__0)
                self.state = 52
                self.match(NarseseParser.T__4)
                self.state = 53
                self.match(NarseseParser.T__5)
                self.state = 54
                self.match(NarseseParser.T__6)
                self.state = 55
                self.coreterm()
                self.state = 56
                self.match(NarseseParser.T__6)
                self.state = 57
                self.coreterm()
                self.state = 58
                self.match(NarseseParser.T__7)
                self.state = 59
                self.match(NarseseParser.COPULA)
                self.state = 60
                self.coreterm()
                self.state = 61
                self.match(NarseseParser.T__3)
                self.state = 62
                self.match(NarseseParser.SentenceType)
                self.state = 64
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 63
                    self.tense()


                self.state = 67
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 66
                    self.freqConf()


                pass

            elif la_ == 3:
                localctx = NarseseParser.Statement2Context(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.match(NarseseParser.NarsLogEntryPrefix)
                self.state = 70
                self.match(NarseseParser.T__0)
                self.state = 71
                self.statement()
                self.state = 72
                self.match(NarseseParser.COPULA)
                self.state = 73
                self.statement()
                self.state = 74
                self.match(NarseseParser.T__3)
                self.state = 75
                self.match(NarseseParser.SentenceType)
                self.state = 77
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 76
                    self.tense()


                self.state = 80
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 79
                    self.freqConf()


                pass

            elif la_ == 4:
                localctx = NarseseParser.Statement3Context(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 82
                self.match(NarseseParser.NarsLogEntryPrefix)
                self.state = 83
                self.compoundTermOpMulti()
                self.state = 84
                self.match(NarseseParser.SentenceType)
                self.state = 86
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 85
                    self.tense()


                self.state = 89
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 88
                    self.freqConf()


                pass

            elif la_ == 5:
                localctx = NarseseParser.Statement4Context(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 91
                self.match(NarseseParser.T__8)
                self.state = 92
                self.match(NarseseParser.T__9)
                pass

            elif la_ == 6:
                localctx = NarseseParser.Statement5Context(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 93
                self.match(NarseseParser.T__0)
                self.state = 94
                self.statement()
                self.state = 95
                self.match(NarseseParser.COPULA)
                self.state = 96
                self.statement()
                self.state = 97
                self.match(NarseseParser.T__3)
                pass

            elif la_ == 7:
                localctx = NarseseParser.Statement6Context(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 99
                self.term()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CoretermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(NarseseParser.WORD, 0)

        def getRuleIndex(self):
            return NarseseParser.RULE_coreterm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCoreterm" ):
                listener.enterCoreterm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCoreterm" ):
                listener.exitCoreterm(self)




    def coreterm(self):

        localctx = NarseseParser.CoretermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_coreterm)
        try:
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [NarseseParser.WORD]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.match(NarseseParser.WORD)
                pass
            elif token in [NarseseParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.match(NarseseParser.T__1)
                self.state = 104
                self.match(NarseseParser.WORD)
                self.state = 105
                self.match(NarseseParser.T__2)
                pass
            elif token in [NarseseParser.T__10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.match(NarseseParser.T__10)
                self.state = 107
                self.match(NarseseParser.WORD)
                self.state = 108
                self.match(NarseseParser.T__11)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FreqConfContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self, i:int=None):
            if i is None:
                return self.getTokens(NarseseParser.FLOAT)
            else:
                return self.getToken(NarseseParser.FLOAT, i)

        def getRuleIndex(self):
            return NarseseParser.RULE_freqConf

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFreqConf" ):
                listener.enterFreqConf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFreqConf" ):
                listener.exitFreqConf(self)




    def freqConf(self):

        localctx = NarseseParser.FreqConfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_freqConf)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(NarseseParser.T__12)
            self.state = 112
            self.match(NarseseParser.FLOAT)
            self.state = 113
            self.match(NarseseParser.T__13)
            self.state = 114
            self.match(NarseseParser.FLOAT)
            self.state = 115
            self.match(NarseseParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(NarseseParser.WORD, 0)

        def Variable(self):
            return self.getToken(NarseseParser.Variable, 0)

        def compoundTerm(self):
            return self.getTypedRuleContext(NarseseParser.CompoundTermContext,0)


        def CYCLES(self):
            return self.getToken(NarseseParser.CYCLES, 0)

        def Believe(self):
            return self.getToken(NarseseParser.Believe, 0)

        def Wonder(self):
            return self.getToken(NarseseParser.Wonder, 0)

        def getRuleIndex(self):
            return NarseseParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)




    def term(self):

        localctx = NarseseParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_term)
        try:
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [NarseseParser.WORD]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.match(NarseseParser.WORD)
                pass
            elif token in [NarseseParser.Variable]:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.match(NarseseParser.Variable)
                pass
            elif token in [NarseseParser.T__1, NarseseParser.T__4, NarseseParser.T__10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.compoundTerm()
                pass
            elif token in [NarseseParser.CYCLES]:
                self.enterOuterAlt(localctx, 4)
                self.state = 120
                self.match(NarseseParser.CYCLES)
                pass
            elif token in [NarseseParser.T__14]:
                self.enterOuterAlt(localctx, 5)
                self.state = 121
                self.match(NarseseParser.T__14)
                pass
            elif token in [NarseseParser.Believe]:
                self.enterOuterAlt(localctx, 6)
                self.state = 122
                self.match(NarseseParser.Believe)
                pass
            elif token in [NarseseParser.Wonder]:
                self.enterOuterAlt(localctx, 7)
                self.state = 123
                self.match(NarseseParser.Wonder)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExtensionalSetContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NarseseParser.TermContext)
            else:
                return self.getTypedRuleContext(NarseseParser.TermContext,i)


        def getRuleIndex(self):
            return NarseseParser.RULE_extensionalSet

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExtensionalSet" ):
                listener.enterExtensionalSet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExtensionalSet" ):
                listener.exitExtensionalSet(self)




    def extensionalSet(self):

        localctx = NarseseParser.ExtensionalSetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_extensionalSet)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(NarseseParser.T__1)
            self.state = 127
            self.term()
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==NarseseParser.T__6:
                self.state = 128
                self.match(NarseseParser.T__6)
                self.state = 129
                self.term()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 135
            self.match(NarseseParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompoundTermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return NarseseParser.RULE_compoundTerm

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CompoundTerm1Context(CompoundTermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NarseseParser.CompoundTermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def compoundTermOpMulti(self):
            return self.getTypedRuleContext(NarseseParser.CompoundTermOpMultiContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompoundTerm1" ):
                listener.enterCompoundTerm1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompoundTerm1" ):
                listener.exitCompoundTerm1(self)


    class CompoundTerm2Context(CompoundTermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NarseseParser.CompoundTermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Believe(self):
            return self.getToken(NarseseParser.Believe, 0)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NarseseParser.StatementContext)
            else:
                return self.getTypedRuleContext(NarseseParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompoundTerm2" ):
                listener.enterCompoundTerm2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompoundTerm2" ):
                listener.exitCompoundTerm2(self)


    class CtextensionalSetContext(CompoundTermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NarseseParser.CompoundTermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def extensionalSet(self):
            return self.getTypedRuleContext(NarseseParser.ExtensionalSetContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCtextensionalSet" ):
                listener.enterCtextensionalSet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCtextensionalSet" ):
                listener.exitCtextensionalSet(self)


    class IntensionalSetContext(CompoundTermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NarseseParser.CompoundTermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def term(self):
            return self.getTypedRuleContext(NarseseParser.TermContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntensionalSet" ):
                listener.enterIntensionalSet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntensionalSet" ):
                listener.exitIntensionalSet(self)



    def compoundTerm(self):

        localctx = NarseseParser.CompoundTermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_compoundTerm)
        self._la = 0 # Token type
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                localctx = NarseseParser.CtextensionalSetContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.extensionalSet()
                pass

            elif la_ == 2:
                localctx = NarseseParser.IntensionalSetContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.match(NarseseParser.T__10)
                self.state = 139
                self.term()
                self.state = 140
                self.match(NarseseParser.T__11)
                pass

            elif la_ == 3:
                localctx = NarseseParser.CompoundTerm1Context(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 142
                self.compoundTermOpMulti()
                pass

            elif la_ == 4:
                localctx = NarseseParser.CompoundTerm2Context(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 143
                self.match(NarseseParser.T__4)
                self.state = 144
                self.match(NarseseParser.Believe)
                self.state = 145
                self.match(NarseseParser.T__6)
                self.state = 146
                self.statement()
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==NarseseParser.T__6:
                    self.state = 147
                    self.match(NarseseParser.T__6)
                    self.state = 148
                    self.statement()
                    self.state = 153
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 154
                self.match(NarseseParser.T__7)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompoundTermOpMultiContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def opMulti(self):
            return self.getTypedRuleContext(NarseseParser.OpMultiContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NarseseParser.StatementContext)
            else:
                return self.getTypedRuleContext(NarseseParser.StatementContext,i)


        def getRuleIndex(self):
            return NarseseParser.RULE_compoundTermOpMulti

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompoundTermOpMulti" ):
                listener.enterCompoundTermOpMulti(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompoundTermOpMulti" ):
                listener.exitCompoundTermOpMulti(self)




    def compoundTermOpMulti(self):
